@@ -3,11 +3,13 @@ package arcn.roomfinder.cliente;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 
-import org.hibernate.mapping.Collection;
-import org.hibernate.mapping.List;
+
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -29,7 +31,8 @@ import arcn.roomfinder.cliente.domain.repository.postgresRepositorio.PostgresCue
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doReturn;
 
-import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 import java.util.Collections;
 
 
@@ -73,7 +76,7 @@ public class PostgresClienteRepositorioTest {
                 null
             );
     
-            cuentaBancariaCorrectaEntidad = new CuentaBancariaEntidad("123456", 1000000, clienteCorrectoEntidad);
+            cuentaBancariaCorrectaEntidad = new CuentaBancariaEntidad("123456789", 1000000, clienteCorrectoEntidad);
 
         }catch(RoomFinderException e){
             e.printStackTrace();
@@ -90,13 +93,74 @@ public class PostgresClienteRepositorioTest {
         assertEquals(clienteCorrecto.getCorreo(), resultado.getCorreo());
     }
 
-    /*@Test
+    @Test
     public void deberiaConsultarTodosLosCliente(){
-        doReturn(Collections.singletonList(clienteCorrectoEntidad)).when(postgresClienteInterface).findAll();
-        ArrayList<Cliente> resultado = (ArrayList<Cliente>)postgresClienteRepositorio.obtenerTodosLosClientes();
+        doReturn(List.of(clienteCorrectoEntidad)).when(postgresClienteInterface).findAll();
+        List<Cliente> resultado = postgresClienteRepositorio.obtenerTodosLosClientes();
         assertEquals(1, resultado.size());
-        assertNotEquals(clienteCorrecto.getCorreo(), resultado.get(0).getCorreo());
+        assertEquals(clienteCorrecto.getCorreo(), resultado.get(0).getCorreo());
+    }
 
-    }*/
+    @Test
+    public void deberiaConsultarClientePorCorreo() throws RoomFinderException {
+        doReturn(Optional.of(clienteCorrectoEntidad)).when(postgresClienteInterface).findById(any(String.class));
+        Cliente resultado = postgresClienteRepositorio.consultarClientePorCorreo(clienteCorrecto.getCorreo());
+        assertNotNull(resultado);
+        assertEquals(clienteCorrecto.getCorreo(), resultado.getCorreo());
+    }
+
+    @Test
+    public void noDeberiaConsultarClientePorCorreoCuandoNoExiste() throws RoomFinderException {
+        assertThrows(RoomFinderException.class, () -> postgresClienteRepositorio.consultarClientePorCorreo("pollito@gmail.com"));
+    }
+
+    @Test
+    public void deberiaEliminarClientePorCorreo()throws RoomFinderException{
+        doReturn(Optional.of(clienteCorrectoEntidad))
+            .doReturn(Optional.empty())
+            .when(postgresClienteInterface).findById(any(String.class));
+        doNothing().when(postgresClienteInterface).delete(any(ClienteEntidad.class));
+        postgresClienteRepositorio.eliminarClientePorCorreo(clienteCorrecto.getCorreo());
+        assertThrows( RoomFinderException.class,()-> postgresClienteRepositorio.consultarClientePorCorreo(clienteCorrecto.getCorreo()));
+    }
     
+    @Test
+    public void noDeberiaEliminarClientePorCorreoCuandoNoExiste() throws RoomFinderException{
+        assertThrows(RoomFinderException.class,()-> postgresClienteRepositorio.eliminarClientePorCorreo("pollito@gmail.com"));
+
+    }
+
+    @Test
+    public void noDeneriaEliminarClientePorCorreoCuandoEsNulo() throws RoomFinderException{
+        assertThrows(RoomFinderException.class,()-> postgresClienteRepositorio.eliminarClientePorCorreo(null));
+    }
+
+    @Test
+    public void deberiaCrearCuentaBancaria() throws RoomFinderException {
+        doReturn(Optional.of(clienteCorrectoEntidad)).when(postgresClienteInterface).findById(any(String.class));
+        doReturn(cuentaBancariaCorrectaEntidad).when(postgresCuentaInterface).save(any(CuentaBancariaEntidad.class));
+        CuentaBancaria resultado = postgresClienteRepositorio.crearCuentaBancaria(cuentaBancariaCorrecta, clienteCorrecto.getCorreo());
+        assertEquals(cuentaBancariaCorrecta.getNumeroCuenta(), resultado.getNumeroCuenta());
+    }
+
+    @Test
+    public void noDeberiaCrearCuentaBancariaCuandoLaCuentaBancariaEsNula() throws RoomFinderException {
+      assertThrows(RoomFinderException.class,()-> postgresClienteRepositorio.crearCuentaBancaria(null, clienteCorrecto.getCorreo()));
+    }
+
+    @Test
+    public void noDeberiaCrearCuentaBancariaCuandoElCorreoEsNulo() throws RoomFinderException {
+      assertThrows(RoomFinderException.class,()-> postgresClienteRepositorio.crearCuentaBancaria(cuentaBancariaCorrecta, null));
+    }
+
+    @Test
+    public void noDeberiaCrearCuentaBancariaCuandoLaInformacionEsNula() throws RoomFinderException {
+      assertThrows(RoomFinderException.class,()-> postgresClienteRepositorio.crearCuentaBancaria(null, null));
+    }
+
+    @Test
+    public void noDeberiaCrearCuentaBancariaCuandoElCorreoNoExiste() throws RoomFinderException {
+      assertThrows(RoomFinderException.class,()-> postgresClienteRepositorio.crearCuentaBancaria(cuentaBancariaCorrecta, "pollito@gmail.com"));
+    }
+
 }
